--- a/styles/global.css
+++ b/styles/global.css
@@ -19,7 +19,7 @@
     --font-family: "Poppins", sans-serif;
     --text-lg: bold 32px/125% var(--font-family);
     /* O 125% é o line height porque eu ja fiz tudo em uma linha so para usar o short hand da font */
-    --text: 16px/150% var(--font-family) ;
+    --text: 16px/150% var(--font-family);
     --text-md: 14px/175% var(--font-family);
     --text-sm: 12px/175% var(--font-family);
 }
@@ -28,4 +28,26 @@ body {
     font: var(--text);
     color: var(--text-color-secondary);
     background-color: var(--bg-color);
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+    /* Inherit é herdada */
+}
+
+a:hover {
+    color: var(--brand-color);
+    text-decoration: underline;
+}
+
+.container {
+    padding-inline: 32px;
+    max-width: 1280px;
+    margin-inline: auto;
+    /* Margin inline para o navegador empurrar os elementos (espacos) quando necessario */
+}
+
+.bg-surface-color {
+    background: var(--surface-color);
 }
